# LAB2

./: README.md
LAB2_1/: CMakeLists.txt  main.cpp  main_menu.h
LAB2_2/: CMakeLists.txt  main.cpp  main_menu.h
LAB2_3/: CMakeLists.txt  main.cpp  main_menu.h
